; ModuleID = '/home/carl/AnghaBench/hashcat/deps/zlib/contrib/minizip/extr_minizip.c_isLargeFile.c'
source_filename = "/home/carl/AnghaBench/hashcat/deps/zlib/contrib/minizip/extr_minizip.c_isLargeFile.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"rb\00", align 1
@SEEK_END = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [25 x i8] c"File : %s is %lld bytes\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @isLargeFile(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  store i32 0, i32* %3, align 4
  store i32 0, i32* %4, align 4
  %7 = load i8*, i8** %2, align 8
  %8 = call i32* @FOPEN_FUNC(i8* %7, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  store i32* %8, i32** %5, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %11, label %26

11:                                               ; preds = %1
  %12 = load i32*, i32** %5, align 8
  %13 = load i32, i32* @SEEK_END, align 4
  %14 = call i32 @FSEEKO_FUNC(i32* %12, i32 0, i32 %13)
  store i32 %14, i32* %6, align 4
  %15 = load i32*, i32** %5, align 8
  %16 = call i32 @FTELLO_FUNC(i32* %15)
  store i32 %16, i32* %4, align 4
  %17 = load i8*, i8** %2, align 8
  %18 = load i32, i32* %4, align 4
  %19 = call i32 @printf(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.1, i64 0, i64 0), i8* %17, i32 %18)
  %20 = load i32, i32* %4, align 4
  %21 = icmp uge i32 %20, -1
  br i1 %21, label %22, label %23

22:                                               ; preds = %11
  store i32 1, i32* %3, align 4
  br label %23

23:                                               ; preds = %22, %11
  %24 = load i32*, i32** %5, align 8
  %25 = call i32 @fclose(i32* %24)
  br label %26

26:                                               ; preds = %23, %1
  %27 = load i32, i32* %3, align 4
  ret i32 %27
}

declare dso_local i32* @FOPEN_FUNC(i8*, i8*) #1

declare dso_local i32 @FSEEKO_FUNC(i32*, i32, i32) #1

declare dso_local i32 @FTELLO_FUNC(i32*) #1

declare dso_local i32 @printf(i8*, i8*, i32) #1

declare dso_local i32 @fclose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
